# PdleBhaiii

./: App.js  app.json  babel.config.js  build.gradle.kts  codemagic.yaml  metro.config.mjs  package-lock.json  package.json  tsconfig.json
pen/: .easignore  .gitignore  PRIVACY_POLICY.md  TERMS_OF_SERVICE.md  app.config.js  app.json  babel.config.js  credentials.json  eas.json  global.css  metro.config.js  metro.transformer.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  types.ts
pen/android/: build.gradle  gradle.properties  settings.gradle
pen/android/app/src/main/cpp/: CMakeLists.txt
pen/app/: _layout.tsx  blocked-users.tsx  notifications.tsx  premium-analytics.tsx  sell-book.tsx  stats.tsx  subscription.tsx
pen/components/: AIAssistant.tsx  BookCard.tsx  Button.tsx  ConfirmationModal.tsx  CustomSplash.tsx  ExperienceSection.tsx  FloatingBookBazaarButton.tsx  FloatingGroupButton.tsx  FloatingNotesButton.tsx  FloatingTelegramButton.tsx  ImageCarousel.tsx  Input.tsx  InterestsModal.tsx  Logo.tsx  NoteCard.tsx  NoteDownloadButton.tsx  NotesModal.tsx  NotificationButton.tsx  PrivacyPolicy.tsx  Rating.tsx  ReportModal.tsx  ReviewSection.tsx  StudyAnalytics.tsx  StudyGuide.tsx  StudyPlanner.tsx  TelegramGroupsModal.tsx  UserCard.tsx  UserItem.tsx  UserQualifications.tsx
pen/constants/: colors.ts
pen/hooks/: useBookCount.ts  useBookListings.ts  useBooks.ts  useMessages.ts  useNotes.ts  useReportModal.ts
pen/ios/: Podfile
pen/lib/: storage.ts  supabase.ts
pen/mocks/: categories.ts  classes.ts
pen/store/: auth-store.ts  block-store.ts  (+8 more)
(+158 files in other folders)
