cmake_minimum_required(VERSION 3.4.1)

# This is a minimal CMake configuration that should work for most React Native projects.
# If your app has native code that needs to be compiled, you'll need to add it here.

# Add your native code here if needed
# For example:
# add_library(
#   your-lib-name
#   SHARED
#   your-source-file.cpp
# )

# Include any libraries that your app depends on
# find_library(log-lib log)
# target_link_libraries(your-lib-name ${log-lib})
